--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/weather_logo.jpg" alt="weather appa logo" width="300px">
+        <img src="images/weather_logo.jpg" alt="weather appa logo" width="300px">
         <div class="container1">
         <div class="box-1">
             <div class="inps-box">
